--- a/react-firebase-auth/src/App.css
+++ b/react-firebase-auth/src/App.css
@@ -1,8 +1,9 @@
-html { background-color: #0f4c81; }
+html { background-color: #ffffff; }
 
 .App {
   text-align: center;
 }
+
 
 .App-logo {
   height: 40vmin;
