--- a/react-firebase-auth/src/HomePage.css
+++ b/react-firebase-auth/src/HomePage.css
@@ -1,8 +1,19 @@
+.box2 {
+  background-color: rgba(0,0,0,.3);
+  margin: '5%';
+  width: "90%";
+  min-width: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
 .homePage {
     cursor: pointer;
     margin: auto;
     margin-top: 15%;
-    text-align: right;
+    text-align: center;
     font-size: 14px;
     width: 100px;
     padding: 4px;
