--- a/react-firebase-auth/src/components/auth/SignUp.css
+++ b/react-firebase-auth/src/components/auth/SignUp.css
@@ -1,3 +1,11 @@
-.main-div button {
-    background-color: chartreuse;
-}
+.box2 {
+    background-color: rgba(0,0,0,.3);
+    margin: '5%';
+    width: "90%";
+    min-width: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+  }
